@@ -2,6 +2,7 @@
 ========
  * improvements
  * adds warning for misconfiguration
+ * auto disable caching on crash
 
 2.0.1 2012-07-14
 ========
